# kalypsso-app-pub

./: .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  REUSE.toml  Readme.md  _typos.toml  kalypsso-app-pub-config.cmake.in
.github/workflows/: ci.yml  pre-commit.yaml
cmake/: add_subdirectory_if_not_empty.cmake  build_or_find_kalypsso_core.cmake  generate_config_h.cmake  options.cmake
doc/: CMakeLists.txt
src/: CMakeLists.txt  kalypsso_app_pub_version.h.in
